@@ -6,8 +6,10 @@ import coil3.PlatformContext
 import coil3.disk.DiskCache
 import coil3.disk.directory
 import coil3.memory.MemoryCache
+import coil3.network.ktor3.KtorNetworkFetcherFactory
 import coil3.request.crossfade
 import coil3.size.Precision
+import com.arn.scrobble.api.Requesters
 import com.arn.scrobble.api.lastfm.MusicEntry
 import com.arn.scrobble.utils.PlatformStuff
 import com.arn.scrobble.utils.Stuff
@@ -36,6 +38,9 @@ fun newImageLoader(
             add(StarMapper())
             if (Stuff.isInDemoMode)
                 add(DemoInterceptor())
+            add(
+                KtorNetworkFetcherFactory(httpClient = { Requesters.baseKtorClient })
+            )
             additionalComponents()
         }
         // Show a short crossfade when loading images asynchronously.
