@@ -2,7 +2,6 @@ package com.arn.scrobble.imageloader
 
 import coil3.ComponentRegistry
 import coil3.ImageLoader
-import coil3.network.okhttp.OkHttpNetworkFetcherFactory
 
 
 actual fun ImageLoader.Builder.additionalOptions(): ImageLoader.Builder {
@@ -10,6 +9,5 @@ actual fun ImageLoader.Builder.additionalOptions(): ImageLoader.Builder {
 }
 
 actual fun ComponentRegistry.Builder.additionalComponents(): ComponentRegistry.Builder {
-    add(OkHttpNetworkFetcherFactory()) // proguard removes it for some reason
     return this
 }
