@@ -2,6 +2,7 @@
 - Updates Discord Rich Presence only after applying the edits to the metadata
 - Parses last.fm wiki HTML with clickable links while preserving line breaks
 - No longer accepts newlines in some text fields
+- Uses the system proxy, if set, on desktop
 - Uses the Material Symbols icons
 - Bug fixes
 - Translation updates by the translators on Crowdin
